// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AskUserDialog > Choice question placeholder > uses default placeholder when not provided 1`] = `
"Select your preferred language:

  1.  TypeScript
  2.  JavaScript
● 3.  Enter a custom value                                                      

Enter to submit · Esc to cancel
"
`;

exports[`AskUserDialog > Choice question placeholder > uses placeholder for "Other" option when provided 1`] = `
"Select your preferred language:

  1.  TypeScript
  2.  JavaScript
● 3.  Type another language...                                                  

Enter to submit · Esc to cancel
"
`;

exports[`AskUserDialog > Scroll Arrows (useAlternateBuffer: false) > shows scroll arrows correctly when useAlternateBuffer is false 1`] = `
"Choose an option

▲
●  1.  Option 1                                                                 
       Description 1                                                            
   2.  Option 2
       Description 2
   3.  Option 3
       Description 3
▼

Enter to select · ↑/↓ to navigate · Esc to cancel
"
`;

exports[`AskUserDialog > Scroll Arrows (useAlternateBuffer: true) > shows scroll arrows correctly when useAlternateBuffer is true 1`] = `
"Choose an option

▲
●  1.  Option 1                                                                 
       Description 1                                                            
   2.  Option 2
       Description 2
   3.  Option 3
       Description 3
▼

Enter to select · ↑/↓ to navigate · Esc to cancel
"
`;

exports[`AskUserDialog > Text type questions > renders text input for type: "text" 1`] = `
"What should we name this component?

> e.g., UserProfileCard


Enter to submit · Esc to cancel
"
`;

exports[`AskUserDialog > Text type questions > shows correct keyboard hints for text type 1`] = `
"Enter the variable name:

> Enter your response


Enter to submit · Esc to cancel
"
`;

exports[`AskUserDialog > Text type questions > shows default placeholder when none provided 1`] = `
"Enter the database connection string:

> Enter your response


Enter to submit · Esc to cancel
"
`;

exports[`AskUserDialog > allows navigating to Review tab and back 1`] = `
"← □ Tests │ □ Docs │ ≡ Review →

Review your answers:

⚠ You have 2 unanswered questions

Tests → (not answered)
Docs → (not answered)

Enter to submit · Tab/Shift+Tab to edit answers · Esc to cancel
"
`;

exports[`AskUserDialog > hides progress header for single question 1`] = `
"Which authentication method should we use?

● 1.  OAuth 2.0                                                                                                         
      Industry standard, supports SSO                                                                                   
  2.  JWT tokens
      Stateless, good for APIs
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel
"
`;

exports[`AskUserDialog > indents multi-line descriptions correctly 1`] = `
"Single choice?

● 1.  Option 1                          
      This is a very long description   
      that is expected to wrap onto     
      multiple lines in a narrow        
      terminal. We want to ensure that  
      all lines are correctly indented. 
  2.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc
to cancel
"
`;

exports[`AskUserDialog > indents multi-line descriptions correctly in multi-select mode 1`] = `
"Multi-select?
(Select all that apply)

● 1. [ ] Option 1                       
         This is a very long description
         that is expected to wrap onto  
         multiple lines in a narrow     
         terminal. We want to ensure    
         that all lines are correctly   
         indented even with checkboxes. 
  2. [ ] Enter a custom value
   Done
   Finish selection

Enter to select · ↑/↓ to navigate · Esc
to cancel
"
`;

exports[`AskUserDialog > renders question and options 1`] = `
"Which authentication method should we use?

● 1.  OAuth 2.0                                                                                                         
      Industry standard, supports SSO                                                                                   
  2.  JWT tokens
      Stateless, good for APIs
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel
"
`;

exports[`AskUserDialog > shows Review tab in progress header for multiple questions 1`] = `
"← □ Framework │ □ Styling │ ≡ Review →

Which framework?

● 1.  React                                                                                                             
      Component library                                                                                                 
  2.  Vue
      Progressive framework
  3.  Enter a custom value

Enter to select · ←/→ to switch questions · Esc to cancel
"
`;

exports[`AskUserDialog > shows keyboard hints 1`] = `
"Which authentication method should we use?

● 1.  OAuth 2.0                                                                                                         
      Industry standard, supports SSO                                                                                   
  2.  JWT tokens
      Stateless, good for APIs
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel
"
`;

exports[`AskUserDialog > shows progress header for multiple questions 1`] = `
"← □ Database │ □ ORM │ ≡ Review →

Which database should we use?

● 1.  PostgreSQL                                                                                                        
      Relational database                                                                                               
  2.  MongoDB
      Document database
  3.  Enter a custom value

Enter to select · ←/→ to switch questions · Esc to cancel
"
`;

exports[`AskUserDialog > shows warning for unanswered questions on Review tab 1`] = `
"← □ License │ □ README │ ≡ Review →

Review your answers:

⚠ You have 2 unanswered questions

License → (not answered)
README → (not answered)

Enter to submit · Tab/Shift+Tab to edit answers · Esc to cancel
"
`;

exports[`AskUserDialog > verifies "All of the above" visual state with snapshot 1`] = `
"Which features?
(Select all that apply)

  1. [x] TypeScript
  2. [x] ESLint
● 3. [x] All of the above                                                                                               
         Select all options                                                                                             
  4. [ ] Enter a custom value
   Done
   Finish selection

Enter to select · ↑/↓ to navigate · Esc to cancel
"
`;
